--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,18 @@
     <title>Etch-A-Sketch</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="grid">
 
+<body>
+
+    <div class="container">
+        <h1><button type="" class="btn-reset">Reset</button></h1>
+        <h1><button type="" class="btn-change">Change Dimensions:</button></h1>
     </div>
+
+    <div class="grid"></div>
+    
+
     <script src="main.js"></script>
 </body>
+
 </html>
